--- a/blogicum/templates/includes/comments.html
+++ b/blogicum/templates/includes/comments.html
@@ -1,20 +1,20 @@
 {% if user.is_authenticated %}
   {% load django_bootstrap5 %}
   <h5 class="mb-4">Оставить комментарий</h5>
-  <form method="post" action="{% url 'blog:add_comment' post.id %}">
+  {% comment %} <form method="post" action="{% url 'blog:add_comment' post.id %}">
     {% csrf_token %}
     {% bootstrap_form form %}
     {% bootstrap_button button_type="submit" content="Отправить" %}
-  </form>
+  </form> {% endcomment %}
 {% endif %}
 <br>
 {% for comment in comments %}
   <div class="media mb-4">
     <div class="media-body">
       <h5 class="mt-0">
-        <a href="{% url 'blog:profile' comment.author.username %}" name="comment_{{ comment.id }}">
+        {% comment %} <a href="{% url 'blog:profile' comment.author.username %}" name="comment_{{ comment.id }}">
           @{{ comment.author.username }}
-        </a>
+        </a> {% endcomment %}
       </h5>
       <small class="text-muted">{{ comment.created_at }}</small>
       <br>
